--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -121,7 +121,12 @@ a {
     text-transform: capitalize;
     color: #222;
     display: inline-block;
-    font-weight: 600;
+    font-weight: 500;
+    font-size: 16px;
+}
+.dropdown-menu .nav-item .nav-link {
+    font-weight: 400!important;
+    font-size: 15px!important;
 }
 @media(min-width:991px) {
     .header_area .navbar .nav .nav-item .nav-link {
@@ -658,51 +663,8 @@ a {
 }
 @media(min-width:767px) {
     .hero-banner__content p {
-    margin-bottom: 40px;
-}
-}.hero-carousel__slide {
-    position: relative;
-}
-.hero-carousel__slide::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, .8);
-    transform: translateY(50px);
-    opacity: 0;
-    transition: all .4s ease;
-}
-.hero-carousel__slideOverlay {
-    position: absolute;
-    bottom: 50px;
-    background: #212A2F;
-    padding: 23px 90px 23px 25px;
-    transform: translateY(50px);
-    opacity: 0;
-    z-index: -1;
-    transition: all .4s ease-in-out;
-}
-.hero-carousel__slideOverlay h3 {
-    font-size: 20px;
-    font-weight: 400;
-    color: #fff;
-}
-.hero-carousel__slideOverlay p {
-    color: #fff;
-    margin: 0;
-}
-.hero-carousel__slide:hover::after {
-    transform: translateY(0);
-    opacity: 1;
-}
-.hero-carousel__slide:hover .hero-carousel__slideOverlay {
-    transform: translateY(0);
-    opacity: 1;
-    z-index: 2;
+        margin-bottom: 40px;
+    }
 }
 .card-product {
     border: 0;
@@ -733,7 +695,7 @@ a {
     border: 0;
     border-radius: 0;
     padding: 7px 12px;
-    background: #8894ff;
+    background: #212A2F;
 }
 .card-product__imgOverlay li button i, .card-product__imgOverlay li button span {
     font-size: 15px;
@@ -817,7 +779,8 @@ a {
     #bestSellerCarousel .owl-prev {
     left: -105px;
 }
-}#bestSellerCarousel .owl-next {
+}
+#bestSellerCarousel .owl-next {
     position: absolute;
     top: 30%;
     transform: translateY(-30%);
@@ -1011,6 +974,7 @@ a {
     background: 0 0;
     color: #222;
     border-color: #eee;
+    font-weight: 600;
 }
 .button-hero {
     padding: 12px 41px;
@@ -1032,6 +996,7 @@ a {
     border-color: #212A2F;
     background: 0 0;
     color: #222;
+    font-weight: 600;
 }
 .button-register {
     font-size: 14px;
