--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -15,11 +15,11 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/dashboard">Home</a>
                         </li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu">
+                        <li class="nav-item">
+                            <a class="nav-link" [routerLink]="[ '/category']">Shop</a>
+                            <!-- <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">Shop Category</a>
+                                    <a class="nav-link" [routerLink]="[ '/category' ]">Shop Category</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="single-product.html">Product Details</a>
@@ -33,18 +33,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="cart.html">Shopping Cart</a>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="blog.html">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="single-blog.html">Blog Details</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" [routerLink]="[ '/blog']">Blog</a>
                         </li>
                         <li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
