--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -136,7 +136,7 @@ a {
     display: none;
 }
 .header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link {
-    color: #212A2F;
+    color: #12236D;
 }
 .header_area .navbar .nav .nav-item.submenu {
     position: relative;
@@ -198,7 +198,7 @@ a {
     border-bottom: none;
 }
 .header_area .navbar .nav .nav-item.submenu ul .nav-item:hover .nav-link {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
 }
 @media(min-width:992px) {
@@ -353,7 +353,7 @@ a {
 .nav-shop li button .nav-shop__circle {
     font-size: 10px!important;
     display: inline-block;
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     padding: 0 6px;
     border-radius: 50%;
@@ -410,7 +410,7 @@ a {
     display: block;
     width: 25px;
     height: 3px;
-    background: #212A2F;
+    background: #12236D;
     margin: auto;
     margin-bottom: 4px;
     transition: all 400ms linear;
@@ -596,7 +596,7 @@ a {
     margin-bottom: 3px;
 }
 .section-intro__style {
-    border-bottom: 2px solid #212A2F;
+    border-bottom: 2px solid #12236D;
     padding-bottom: 8px;
 }
 .hero-banner {
@@ -613,7 +613,7 @@ a {
     display: block;
     width: 5%;
     height: 100%;
-    background: #212A2F;
+    background: #12236D;
     position: absolute;
     top: 0;
     left: 0;
@@ -695,7 +695,7 @@ a {
     border: 0;
     border-radius: 0;
     padding: 7px 12px;
-    background: #212A2F;
+    background: #12236D;
 }
 .card-product__imgOverlay li button i, .card-product__imgOverlay li button span {
     font-size: 15px;
@@ -703,7 +703,7 @@ a {
     vertical-align: middle;
 }
 .card-product__imgOverlay li button:hover {
-    background: #212A2F;
+    background: #12236D;
 }
 .card-product__imgOverlay li:not(:last-child) {
     margin-right: 5px;
@@ -721,7 +721,7 @@ a {
     transform: translateY(0);
 }
 .card-product:hover .card-product__title a {
-    color: #212A2F;
+    color: #12236D;
 }
 .offer {
     background: url(../img/home/parallax-bg.png) right center no-repeat;
@@ -760,11 +760,11 @@ a {
 }
 #bestSellerCarousel .owl-prev i, #bestSellerCarousel .owl-prev span, #bestSellerCarousel .owl-next i, #bestSellerCarousel .owl-next span {
     font-size: 15px;
-    color: #212A2F;
+    color: #12236D;
     line-height: 40px;
 }
 #bestSellerCarousel .owl-prev:hover, #bestSellerCarousel .owl-next:hover {
-    background: #212A2F;
+    background: #12236D;
 }
 #bestSellerCarousel .owl-prev:hover i, #bestSellerCarousel .owl-prev:hover span, #bestSellerCarousel .owl-next:hover i, #bestSellerCarousel .owl-next:hover span {
     color: #fff;
@@ -832,10 +832,10 @@ a {
     transition: all .5s ease;
 }
 .card-blog:hover .card-blog__title a {
-    color: #212A2F;
+    color: #12236D;
 }
 .card-blog:hover .card-blog__link {
-    color: #212A2F;
+    color: #12236D;
 }
 .card-blog:hover .card-blog__link i, .card-blog:hover .card-blog__link span {
     padding-left: 10px;
@@ -868,7 +868,7 @@ a {
     position: absolute;
     top: 50px;
     left: 10px;
-    color: #212A2F;
+    color: #12236D;
 }
 .subscribe-form .form-control {
     border-radius: 30px;
@@ -902,12 +902,12 @@ a {
 }
 }.button {
     display: inline-block;
-    border: 1px solid #212A2F;
+    border: 1px solid #12236D;
     border-radius: 30px;
     color: #222;
     font-weight: 500;
     padding: 12px 50px;
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     transition: all .4s ease;
 }
@@ -933,7 +933,7 @@ a {
     color: #222;
 }
 .button-blog:hover {
-    background: #212A2F!important;
+    background: #12236D!important;
     color: #fff!important;
 }
 .button-postComment {
@@ -980,11 +980,11 @@ a {
     padding: 12px 41px;
 }
 .button--active {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
 }
 .button-contactForm {
-    border: 1px solid #212A2F!important;
+    border: 1px solid #12236D!important;
     border-radius: 0;
     padding: 11px 26px;
 }
@@ -993,7 +993,7 @@ a {
     border-radius: 30px;
 }
 .button:hover {
-    border-color: #212A2F;
+    border-color: #12236D;
     background: 0 0;
     color: #222;
     font-weight: 600;
@@ -1059,11 +1059,11 @@ a {
     z-index: -1;
 }
 .blog-banner-btn {
-    border: 2px solid #212A2F;
+    border: 2px solid #12236D;
     padding: 10px 45px;
 }
 .blog-banner-btn:hover {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
 }
 .banner-breadcrumb {
@@ -1106,7 +1106,7 @@ a {
     transition: all .3s ease 0s;
 }
 .l_blog_item .l_blog_text h4:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .l_blog_item .l_blog_text p {
     margin-bottom: 0;
@@ -1127,7 +1127,7 @@ a {
     margin-right: 0;
 }
 .causes_slider .owl-dots .owl-dot.active {
-    background: #212A2F;
+    background: #12236D;
 }
 .causes_item {
     background: #fff;
@@ -1146,7 +1146,7 @@ a {
 .causes_item .causes_img .c_parcent span {
     width: 70%;
     height: 3px;
-    background: #212A2F;
+    background: #12236D;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -1156,7 +1156,7 @@ a {
     position: absolute;
     right: -10px;
     bottom: 0;
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     padding: 0 5px;
 }
@@ -1171,7 +1171,7 @@ a {
     cursor: pointer;
 }
 .causes_item .causes_text h4:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .causes_item .causes_text p {
     font-size: 14px;
@@ -1181,11 +1181,11 @@ a {
 }
 .causes_item .causes_bottom a {
     width: 50%;
-    border: 1px solid #212A2F;
+    border: 1px solid #12236D;
     text-align: center;
     float: left;
     line-height: 50px;
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     font-size: 14px;
     font-weight: 500;
@@ -1235,7 +1235,7 @@ a {
     color: #222;
 }
 .tags .tag_btn:before {
-    background: #212A2F;
+    background: #12236D;
 }
 .tags .tag_btn+.tag_btn {
     margin-left: 2px;
@@ -1311,7 +1311,7 @@ a {
     font-size: 14px;
 }
 .blog_info .post_tag a.active {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_info .blog_meta li a {
     color: #777;
@@ -1329,7 +1329,7 @@ a {
     vertical-align: middle;
 }
 .blog_info .blog_meta li a:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_post img {
     max-width: 100%}
@@ -1344,7 +1344,7 @@ a {
     transition: all .3s linear;
 }
 .blog_details h2:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_details p {
     margin-bottom: 26px;
@@ -1366,7 +1366,7 @@ a {
 .blog_right_sidebar .widget_title {
     font-size: 18px;
     line-height: 25px;
-    background: #212A2F;
+    background: #12236D;
     text-align: center;
     color: #fff;
     padding: 8px 0;
@@ -1382,7 +1382,7 @@ a {
     padding-left: 20px;
     border-radius: 45px;
     z-index: 0;
-    background: #212A2F;
+    background: #12236D;
 }
 .blog_right_sidebar .search_widget .input-group .form-control.placeholder {
     color: #fff;
@@ -1437,7 +1437,7 @@ a {
     margin-left: 20px;
 }
 .blog_right_sidebar .author_widget .social_icon a:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_right_sidebar .popular_post_widget .post_item .media-body {
     justify-content: center;
@@ -1452,7 +1452,7 @@ a {
     transition: all .3s linear;
 }
 .blog_right_sidebar .popular_post_widget .post_item .media-body h3:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_right_sidebar .popular_post_widget .post_item .media-body p {
     font-size: 12px;
@@ -1479,10 +1479,10 @@ a {
     padding-top: 15px;
 }
 .blog_right_sidebar .post_category_widget .cat-list li:hover {
-    border-color: #212A2F;
+    border-color: #12236D;
 }
 .blog_right_sidebar .post_category_widget .cat-list li:hover a {
-    color: #212A2F;
+    color: #12236D;
 }
 .blog_right_sidebar .newsletter_widget {
     text-align: center;
@@ -1531,7 +1531,7 @@ a {
     box-shadow: none;
 }
 .blog_right_sidebar .newsletter_widget .bbtns {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     font-size: 12px;
     line-height: 38px;
@@ -1557,7 +1557,7 @@ a {
     font-size: 12px;
 }
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
 }
 .blog_right_sidebar .br {
@@ -1581,7 +1581,7 @@ a {
     font-weight: 400;
 }
 .blog-pagination .page-item.active .page-link {
-    background-color: #212A2F;
+    background-color: #12236D;
     border-color: transparent;
     color: #fff;
 }
@@ -1603,7 +1603,7 @@ a {
 .blog-pagination .page-link:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #212A2F;
+    background-color: #12236D;
     border-color: #eee;
 }
 .single-post-area .social-links {
@@ -1791,7 +1791,7 @@ a {
     transition: all .3s ease 0s;
 }
 .comments-area .btn-reply:hover {
-    background-color: #212A2F;
+    background-color: #12236D;
     color: #fff;
     font-weight: 700;
 }
@@ -1911,18 +1911,18 @@ a {
     z-index: -1;
 }
 .contact-banner-btn {
-    border: 2px solid #212A2F;
+    border: 2px solid #12236D;
     padding: 10px 45px;
 }
 .contact-banner-btn:hover {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
 }
 .contact-info__icon {
     margin-right: 20px;
 }
 .contact-info__icon i, .contact-info__icon span {
-    color: #212A2F;
+    color: #12236D;
     font-size: 20px;
 }
 .contact-info .media-body h3 {
@@ -2015,7 +2015,7 @@ a {
 .sidebar-categories .head {
     font-family: oswald, sans-serif;
     line-height: 50px;
-    background: #212A2F;
+    background: #12236D;
     padding: 0 30px;
     font-size: 18px;
     font-weight: 400;
@@ -2036,7 +2036,7 @@ a {
     border-bottom: 1px solid #eee;
 }
 .sidebar-categories .main-nav-list a:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .sidebar-categories .main-nav-list a .number {
     color: #ccc;
@@ -2055,7 +2055,7 @@ a {
 .sidebar-filter .top-filter-head {
     font-family: oswald, sans-serif;
     line-height: 50px;
-    background: #212A2F;
+    background: #12236D;
     padding: 0 30px;
     font-size: 18px;
     font-weight: 400;
@@ -2163,13 +2163,13 @@ a {
     z-index: 1;
 }
 .pixel-radio:checked {
-    border: 8px solid #212A2F;
+    border: 8px solid #12236D;
 }
 .pixel-radio:checked::after {
     -webkit-animation: click-wave .65s;
     -moz-animation: click-wave .65s;
     animation: click-wave .65s;
-    background: #212A2F;
+    background: #12236D;
     content: '';
     display: block;
     width: 15px;
@@ -2195,13 +2195,13 @@ a {
     box-shadow: none;
 }
 .price-range-area .noUi-base {
-    background: #e8f0f2;
+    background: #6c757d;
 }
 .price-range-area .noUi-horizontal {
     height: 6px;
 }
 .price-range-area .noUi-connect {
-    background: #e8f0f2;
+    background: #12236d;
     border-radius: 0;
     box-shadow: none;
 }
@@ -2212,7 +2212,7 @@ a {
     top: -5px;
     border-radius: 50%;
     border: 0;
-    background: #212A2F;
+    background: #12236D;
     box-shadow: none;
     cursor: pointer;
     -webkit-transition: ease .1s;
@@ -2224,7 +2224,7 @@ a {
     outline: none;
 }
 .price-range-area .noUi-horizontal .noUi-handle:hover {
-    border: 3px solid #212A2F;
+    border: 3px solid #12236D;
     background: #fff;
 }
 .price-range-area .noUi-handle::after, .price-range-area .noUi-handle::before {
@@ -2280,7 +2280,7 @@ a {
     font-weight: 400;
 }
 .single-search-product:hover .title {
-    color: #212A2F;
+    color: #12236D;
 }
 .order-wrapper {
     background: #f1f6f7;
@@ -2323,7 +2323,7 @@ a {
 }
 .billing-alert {
     font-size: 18px;
-    color: #212A2F;
+    color: #12236D;
     margin-bottom: 30px;
 }
 .confirmation-card {
@@ -2451,7 +2451,7 @@ a {
     margin-bottom: 0;
 }
 .check_title h2 a {
-    color: #212A2F;
+    color: #12236D;
     text-decoration: underline;
 }
 .returning_customer p {
@@ -2548,9 +2548,9 @@ a {
     border-radius: 3px;
 }
 .tp_btn:hover {
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
-    border-color: #212A2F;
+    border-color: #12236D;
 }
 .billing_details h3 {
     font-size: 18px;
@@ -2630,7 +2630,7 @@ a {
     margin-right: 5px;
 }
 .billing_details .contact_form .form-group .creat_account a {
-    color: #212A2F;
+    color: #12236D;
 }
 .order_box {
     background: #e8f0f2;
@@ -2725,8 +2725,8 @@ a {
     font-size: 12px;
 }
 .order_box .payment_item.active h4:before {
-    background: #212A2F;
-    border-color: #212A2F;
+    background: #12236D;
+    border-color: #12236D;
 }
 .order_box .creat_account {
     margin-bottom: 15px;
@@ -2894,7 +2894,7 @@ a {
 }
 .order_box .creat_account a {
     font-size: 12px;
-    color: #212A2F;
+    color: #12236D;
 }
 .login_box_area .login_box_img {
     height: 350px;
@@ -2917,7 +2917,7 @@ a {
     height: 100%;
     width: 100%;
     content: "";
-    background: #212A2F;
+    background: #12236D;
     opacity: .9;
 }
 .login_box_area .login_box_img .hover {
@@ -3238,7 +3238,7 @@ a {
     height: 40px;
     line-height: 38px;
     text-transform: uppercase;
-    background: #212A2F;
+    background: #12236D;
     padding: 0 38px;
     margin-right: 5px;
     margin-left: 10px;
@@ -3286,7 +3286,7 @@ a {
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background: #212A2F;
+    background: #12236D;
     display: inline-block;
     position: absolute;
     right: 3px;
@@ -3352,7 +3352,7 @@ a {
     padding: 0 44px;
     line-height: 38px;
     text-transform: capitalize;
-    background: #212A2F;
+    background: #12236D;
     border-radius: 30px;
     color: #fff;
     font-weight: 500;
@@ -3414,7 +3414,7 @@ a {
     font-family: roboto, sans-serif;
     font-size: 24px;
     font-weight: 700;
-    color: #212A2F;
+    color: #12236D;
     margin-bottom: 10px;
 }
 .s_product_text .list li {
@@ -3578,8 +3578,8 @@ a {
 }
 }.product_description_area .nav.nav-tabs li a.active {
     color: #fff;
-    background: #212A2F;
-    border-color: #212A2F;
+    background: #12236D;
+    border-color: #12236D;
 }
 .product_description_area .tab-content {
     border-left: 1px solid #eee;
@@ -3596,7 +3596,7 @@ a {
 .product_description_area .tab-content .total_rate .box_total h4 {
     font-size: 48px;
     font-weight: 700;
-    color: #212A2F;
+    color: #12236D;
 }
 .product_description_area .tab-content .total_rate .box_total h5 {
     color: #333;
@@ -3697,8 +3697,8 @@ a {
     @icnlude transition;
 }
 .review_item .media .media-body .reply_btn:hover {
-    background: #212A2F;
-    border-color: #212A2F;
+    background: #12236D;
+    border-color: #12236D;
     color: #fff;
 }
 .review_item p {
@@ -3786,7 +3786,7 @@ a {
     height: 28px;
     line-height: 28px;
     text-align: center;
-    background: #212A2F;
+    background: #12236D;
     color: #fff;
     border-radius: 20px;
 }
@@ -3798,7 +3798,7 @@ a {
     font-family: roboto, sans-serif;
 }
 .tp_widgets .list li a:hover {
-    color: #212A2F;
+    color: #12236D;
 }
 .tp_widgets .list li:last-child {
     margin-bottom: 0;
@@ -3836,7 +3836,7 @@ a {
     margin-bottom: 0;
 }
 .footer-bottom .footer-text a {
-    color: #212A2F;
+    color: #12236D;
     opacity: 1;
 }
 .footer-only {
